--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -11,10 +11,10 @@
 <link rel="apple-touch-icon" sizes="144x144" href="{{ base_path }}/images/favicon.png">
 <link rel="apple-touch-icon" sizes="152x152" href="{{ base_path }}/images/favicon.png">
 <link rel="apple-touch-icon" sizes="180x180" href="{{ base_path }}/images/favicon.png">
-<link rel="icon" type="image/png" href="{{ base_path }}/images/favicon.png" sizes="32x32">
-<link rel="icon" type="image/png" href="{{ base_path }}/images/favicon.png" sizes="192x192">
-<link rel="icon" type="image/png" href="{{ base_path }}/images/favicon.png" sizes="96x96">
-<link rel="icon" type="image/png" href="{{ base_path }}/images/favicon.png" sizes="16x16">
+<link rel="icon" type="image/png" href="{{ base_path }}/images/favicon_32x32.png" sizes="32x32">
+<link rel="icon" type="image/png" href="{{ base_path }}/images/favicon_192x192.png" sizes="192x192">
+<link rel="icon" type="image/png" href="{{ base_path }}/images/favicon_96x96.png" sizes="96x96">
+<link rel="icon" type="image/png" href="{{ base_path }}/images/favicon_16x16.png" sizes="16x16">
 <link rel="manifest" href="{{ base_path }}/images/manifest.json?v=M44lzPylqQ">
 <link rel="mask-icon" href="{{ base_path }}/images/favicon.png" color="#000000">
 <link rel="shortcut icon" href="/images/favicon.png">
